# plazza

./: .clang-format  .clang-tidy  .coderabbit.yaml  .gitignore  CMakeLists.txt  CMakePresets.json  sonar-project.properties
.claude/: CLAUDE.md
.github/workflows/: built-and-lint.yaml  semgrep.yml  sonarqube.yml  tsan.yml
doc/: subject.md
src/: CMakeLists.txt  Pizza.hpp  main.cpp
src/concurrency/: CMakeLists.txt  ConditionVariable.cpp  ConditionVariable.hpp  Mutex.cpp  Mutex.hpp  Process.cpp  Process.hpp  Thread.cpp  Thread.hpp
src/display/: CMakeLists.txt  Display.cpp  Display.hpp
src/exceptions/: Exception.hpp
src/ipc/: CMakeLists.txt  MessageQueue.cpp  MessageQueue.hpp  PizzaSerializer.cpp  PizzaSerializer.hpp
src/kitchen/: CMakeLists.txt  KitchenWorker.cpp  KitchenWorker.hpp
src/kitchen/IngredientStock/: IngredientStock.cpp  IngredientStock.hpp
src/kitchen/cook/: Cook.cpp  Cook.hpp
src/kitchen/threadPool/: ThreadPool.cpp  ThreadPool.hpp
src/logger/: CMakeLists.txt  Logger.cpp  Logger.hpp
src/parser/: CMakeLists.txt  Parser.cpp  Parser.hpp
src/pizza/: CMakeLists.txt  Pizza.cpp  Pizza.hpp
src/pizza/factory/: PizzaFactory.cpp  PizzaFactory.hpp
src/reception/: CMakeLists.txt
src/reception/kitchenHandle/: KitchenHandle.cpp  KitchenHandle.hpp
src/reception/loadBalancer/: LoadBalancer.cpp  LoadBalancer.hpp
src/shell/: CMakeLists.txt  Shell.cpp  Shell.hpp
src/utils/: Constant.hpp  ErrorMessage.hpp
tests/: CMakeLists.txt  functional_tests.py  test_cases.py
tests/concurrency/: ConditionVariableTest.cpp  MutexConcurrencyTest.cpp  MutexTest.cpp  ProcessConcurrencyTest.cpp  ProcessTest.cpp  ThreadTest.cpp
tests/concurrency/fixtures/: NotifyFixture.hpp  SharedCounterFixture.hpp
